# agent-frontier

./: .gitignore  Makefile  README.md  agent-frontier-2026Q2.md
demo1-mcp-server/: .env.example  Makefile  README.md  environment.yml  pyproject.toml  replay.py
demo1-mcp-server/data/: incidents.json  metrics.json  service_state.json
demo1-mcp-server/data/runbooks/: order-api.md  payment-api.md  user-api.md
demo1-mcp-server/src/demo1_mcp/: acceptance.py  config.py  dashboard.py  data_store.py  prompts.py  resources.py  server.py  tools.py  trace.py
demo2-reasoning-ttc/: .env.example  Makefile  README.md  environment.yml  pyproject.toml  replay.py
demo2-reasoning-ttc/data/: gsmhardv2_100.jsonl
demo2-reasoning-ttc/src/demo2_reasoning/: config.py  dashboard.py  dataset.py  demo_all.py  evaluator.py  metrics.py  report.py  runner.py  schemas.py  strategies.py  trace.py  virtual_usage.py
demo2-reasoning-ttc/src/demo2_reasoning/providers/: base.py  openai_compatible.py  registry.py
demo3-browser-agent/: .env.example  Makefile  README.md  environment.yml  pyproject.toml  replay.py
demo3-browser-agent/src/demo3_browser_agent/: config.py  dashboard.py  demo_all.py  policy.py  replay_view.py  runner.py  scenario_runner.py  scenarios.py  schemas.py  trace.py
demo3-browser-agent/src/demo3_browser_agent/browser/: actions.py  guardrails.py  marking.py  session.py
demo3-browser-agent/src/demo3_browser_agent/local_site/: server.py
demo3-browser-agent/src/demo3_browser_agent/providers/: base.py  openai_compatible_vision.py  registry.py
demo3-browser-agent/src/demo3_browser_agent/tasks/: __init__.py  arxiv.py  base.py  ebay.py  github_issues.py  local_form.py  modal_wall.py  network_drop.py
(+5 files in other folders)
