[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo2-reasoning-ttc"
version = "0.1.0"
description = "Demo 2 reasoning models and test-time compute evaluation"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.35.0",
  "pandas>=2.2.0",
  "matplotlib>=3.8.0",
  "plotly>=5.22.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/demo2_reasoning"]
