[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo3-browser-agent"
version = "0.1.0"
description = "Demo 3 browser agent with Set-of-Mark grounding"
requires-python = ">=3.11"
dependencies = [
  "playwright>=1.44.0",
  "streamlit>=1.35.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
  "pillow>=10.0.0",
  "beautifulsoup4>=4.12.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/demo3_browser_agent"]
